--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "phpdocumentor/reflection-docblock": "^5.3",
         "phpstan/phpdoc-parser": "^1.2",
         "sensio/framework-extra-bundle": "^6.1",
+        "stripe/stripe-php": "^7.108",
         "symfony/asset": "5.4.*",
         "symfony/console": "5.4.*",
         "symfony/dependency-injection": "5.4.*",
@@ -44,6 +45,7 @@
         "symfony/web-link": "5.4.*",
         "symfony/yaml": "5.4.*",
         "twig/extra-bundle": "^2.12|^3.0",
+        "twig/intl-extra": "^3",
         "twig/twig": "^2.12|^3.0"
     },
     "require-dev": {
